syntax = "proto3";

message BatteryInfo {
    bool valid = 1;
    float temperature = 2;
    float voltage = 3;
    float current = 4;
    int32 rem_capacity = 5;
    int32 status = 6;
    int32 relative_state_of_charge = 7;  
    int32 cycle_count = 8;
}

// Poll BatteryManager for a BatteryInfo reading
message RequestBatteryInfo {
    //
}

// Request battery to start pushing BatteryInfo messages periodically
message RequestBatteryNotifications {
    bool enable = 1;
}

message ResponseBatteryNotifications {
    //
}